unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/whistic_profile__Whistic_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>location for global settings within the Whistic app</description>
    <label>Whistic Settings</label>
</CustomObject>