unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/fields/whistic_profile__API_Key__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__API_Key__c</fullName>
    <description>Whistic API key, provided by Whistic and required configuration for integration with Security Profiles in Whistic</description>
    <externalId>true</externalId>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>