unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/fields/whistic_profile__Base_Url__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Base_Url__c</fullName>
    <defaultValue>&quot;https://api.whistic.com&quot;</defaultValue>
    <description>used to specify the base url for the Whistic api</description>
    <inlineHelpText>remember to remove the &#39;/&#39; from the end of the url if it exists</inlineHelpText>
    <label>Base Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>