unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/fields/whistic_profile__Customer_Create_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Customer_Create_Endpoint_Path__c</fullName>
    <defaultValue>&#39;/salesforce/org&#39;</defaultValue>
    <description>used to specify the path to the endpoint to create a new customer org integration</description>
    <inlineHelpText>remember to start the path with a &#39;/&#39; as it will be appended to the &quot;Base Url&quot;</inlineHelpText>
    <label>Customer Create Endpoint Path</label>
    <length>200</length>
    <type>Text</type>
</CustomField>