unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/fields/whistic_profile__Is_Connected__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Is_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Connected</label>
    <type>Checkbox</type>
</CustomField>