unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/fields/whistic_profile__Package_Version__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Package_Version__c</fullName>
    <description>The version number of the currently installed package.</description>
    <label>Package Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>