unpackaged/main/default/objects/whistic_profile__Whistic_Settings__c/fields/whistic_profile__Profile_Share_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Profile_Share_Endpoint_Path__c</fullName>
    <defaultValue>&#39;/salesforce/org/&#39; + $Organization.Id + &#39;/securityProfileShare&#39;</defaultValue>
    <description>Used to specify the path to the profile share endpoint</description>
    <inlineHelpText>remember to start with a &#39;/&#39; as it will be appended to the &quot;Base Url&quot;</inlineHelpText>
    <label>Profile Share Endpoint Path</label>
    <length>200</length>
    <type>Text</type>
</CustomField>